# cxxconvolver

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: threadpool.hpp
include/threadpool/: task_adaptors.hpp
lib/: libCxxConvolverExample.py
src/: .tags  CMakeLists.txt  cxxConvolver.cpp  cxxConvolver.hpp  main.cpp  playback_main.cpp
tests/: CMakeLists.txt  cxxConvolver_tests.cpp
